--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
 @font-face {
-    font-family: 'iconfont';  /* project id 3232227 */
-    src: url('');
-    src: url('?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_3232227_27xfq3mabgm.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_3232227_27xfq3mabgm.woff') format('woff'),
-    url('//at.alicdn.com/t/font_3232227_27xfq3mabgm.ttf') format('truetype'),
-    url('#iconfont') format('svg');
+    font-family: 'iconfont';  /* Project id 3232227 */
+    src: url('//at.alicdn.com/t/c/font_3232227_ars2a2ef9fr.woff2?t=1669604263763') format('woff2'),
+         url('//at.alicdn.com/t/c/font_3232227_ars2a2ef9fr.woff?t=1669604263763') format('woff'),
+         url('//at.alicdn.com/t/c/font_3232227_ars2a2ef9fr.ttf?t=1669604263763') format('truetype');
 }
 .iconfont{
     font-family:"iconfont" !important;
@@ -20,29 +17,36 @@
     font-family: '思源黑体 CN','思源黑体','黑体',sans-serif;
     font-weight: lighter;
 }
+#caution{
+    font-size: 1em;
+    font-family: '思源黑体 CN','思源黑体','黑体',sans-serif;
+    font-weight: lighter;
+    color: #FFFFFF;
+    background-color: #EE8888;
+    border-radius: 5px;
+    margin:10px 20px 0 20px;
+    padding:10px;
+}
 body{
     margin:0;
     background-color: rgb(190, 192, 155);
 }
 @media screen and (max-width:600px){
-    .topInfo{
-        margin:0 auto 30px auto;
-    }
     #content{
         width:100%;
-        background-color: rgb(255, 255, 238);
-        margin:0 auto 70px auto;
+        margin:0 auto 30px auto;
     }
 }
 @media screen and (min-width:600px){
-    .topInfo{
-        margin:200px auto 30px auto;
-    }
     #content{
         width:60%;
-        background-color: rgb(255, 255, 238);
         margin:0 auto 70px auto;
+        margin:200px auto 30px auto;
     }
+}
+#content{
+    transition: all 250ms ease-in-out;
+    background-color: rgb(255, 255, 238);
 }
 #pageInfo{
     margin:0 auto 30px auto;
@@ -58,6 +62,7 @@ body{
     text-align: center;
 }
 .passagebutton{
+    box-sizing: border-box;
     cursor: pointer;
     width: 100%;
     border-top: 2px solid #CCCCCC;
@@ -71,6 +76,7 @@ body{
     color:#CC9900;
 }
 .back{
+    cursor:pointer;
     text-decoration: none;
     color:black;
     background-color: rgb(223, 223, 205);
@@ -93,7 +99,7 @@ body{
     display:inline;
 }
 #read{
-    margin-bottom: 70px;
+    margin-bottom: 0px;
     padding: 10px;
 }
 .pageselector{
@@ -103,4 +109,40 @@ body{
 .katex-display{
     overflow-x: auto;
     overflow-y: hidden;
+}
+.actionbar{
+    margin:0;
+    border-top:solid 1px #CCCCCC;
+    padding:10px;
+}
+.action-button{
+    padding:10px 20px 10px 20px;
+    border-radius:8px;
+    background-color: rgb(214, 214, 158);
+    border:1px solid #CCCCCC;
+    cursor: pointer;
+    text-decoration: none;
+    transition:all 0.2s;
+    display: inline-block;
+    color:black;
+    font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif;
+}
+.action-button:hover{
+    background-color: rgb(168, 168, 138);
+}
+@media(prefers-color-scheme: dark){
+    body{
+        background-color: rgb(10, 10, 40);
+        color:white;
+    }
+    #content{
+        background-color: rgb(40, 40, 40);
+    }
+    .action-button{
+        color: white;
+        background-color: rgb(80, 80, 60);
+    }
+    .action-button:hover{
+        background-color: rgb(122, 122, 97);
+    }
 }
