--- a/css/editor.css
+++ b/css/editor.css
@@ -1,98 +1,99 @@
 @font-face {
-    font-family: 'iconfont';  /* project id 3232227 */
-    src: url('');
-    src: url('?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_3232227_27xfq3mabgm.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_3232227_27xfq3mabgm.woff') format('woff'),
-    url('//at.alicdn.com/t/font_3232227_27xfq3mabgm.ttf') format('truetype'),
-    url('#iconfont') format('svg');
+    font-family: "iconfont"; /* project id 3232227 */
+    src: url("");
+    src: url("?#iefix") format("embedded-opentype"),
+        url("//at.alicdn.com/t/font_3232227_27xfq3mabgm.woff2") format("woff2"),
+        url("//at.alicdn.com/t/font_3232227_27xfq3mabgm.woff") format("woff"),
+        url("//at.alicdn.com/t/font_3232227_27xfq3mabgm.ttf") format("truetype"),
+        url("#iconfont") format("svg");
 }
-.iconfont{
-    font-family:"iconfont" !important;
-    font-size:32px;font-style:normal;
+.iconfont {
+    font-family: "iconfont" !important;
+    font-size: 32px;
+    font-style: normal;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
 }
-.topInfo{
-    margin:200px auto 30px auto;
+.topInfo {
+    margin: 200px auto 30px auto;
     text-align: center;
-    font-size:3em;
-    font-family: '思源黑体 CN','思源黑体','黑体',sans-serif;
+    font-size: 3em;
+    font-family: "思源黑体 CN", "思源黑体", "黑体", sans-serif;
     font-weight: lighter;
 }
-body{
-    margin:0;
+body {
+    margin: 0;
     background-color: rgb(190, 192, 155);
 }
-#content{
-    width:90%;
+#content {
+    width: 90%;
     background-color: rgb(255, 255, 238);
-    margin:0 auto 70px auto;
+    margin: 0 auto 70px auto;
 }
-#pageInfo{
-    margin:0 auto 30px auto;
+#pageInfo {
+    margin: 0 auto 30px auto;
     text-align: center;
-    font-size:2em;
-    font-family: '思源黑体 CN','思源黑体','黑体',sans-serif;
+    font-size: 2em;
+    font-family: "思源黑体 CN", "思源黑体", "黑体", sans-serif;
     font-weight: lighter;
 }
-.hidden{
-    display:none;
+.hidden {
+    display: none;
 }
-.loading{
+.loading {
     text-align: center;
 }
-.passagebutton{
+.passagebutton {
     cursor: pointer;
     width: 100%;
-    border-top: 2px solid #CCCCCC;
+    border-top: 2px solid #cccccc;
     padding: 5px;
 }
-.titlebutton{
-    font-family: '思源黑体 CN','思源黑体','黑体',sans-serif;
+.titlebutton {
+    font-family: "思源黑体 CN", "思源黑体", "黑体", sans-serif;
     font-weight: lighter;
 }
-.datetime{
-    color:#CC9900;
+.datetime {
+    color: #cc9900;
 }
-.back{
+.back {
     text-decoration: none;
-    color:black;
+    color: black;
     background-color: rgb(223, 223, 205);
 }
-.back:hover{
+.back:hover {
     background-color: rgb(184, 184, 165);
 }
-#beian{
+#beian {
     background-color: #222222;
     position: fixed;
-    bottom:0;
-    height:30px;
-    width:100%;
+    bottom: 0;
+    height: 30px;
+    width: 100%;
     text-align: center;
 }
-.beiana{
-    color:#AAAAAA;
+.beiana {
+    color: #aaaaaa;
     text-decoration: none;
     text-align: center;
-    display:inline;
+    display: inline;
 }
-#read{
+#read {
     margin-bottom: 70px;
 }
-.button{
+.button {
     text-decoration: none;
-    color:white;
+    color: white;
     display: inline-block;
-    padding:3px;
+    padding: 3px;
     background-color: #916c00;
 }
-.button:hover{
-    color:rgb(177, 177, 177);
+.button:hover {
+    color: rgb(177, 177, 177);
     background-color: #493700;
 }
-.pageselector{
-    margin:auto;
+.pageselector {
+    margin: auto;
     text-align: center;
 }
